# muon-induced-secondaries

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  ReadMe.md  calculate_e_sampling.py  main.cc  mute_update.txt
Rock Composition Data/: ReadMe.md  cjpl_rock.txt  hideout_rock.txt  kamioka_rock.txt  lngs_rock.txt  lsm_rock.txt  snolab_rock.txt  soudan_rock.txt  y2l_rock.txt
energy_sampling/: Geant4_CJPL_underground_energy_CDFs.txt  Geant4_CJPL_underground_intensities_dd.txt  Geant4_CJPL_underground_mean_energies.txt  Geant4_KamLand_underground_energy_CDFs.txt  Geant4_KamLand_underground_intensities_dd.txt  Geant4_KamLand_underground_mean_energies.txt  Geant4_LNGS_underground_energy_CDFs.txt  Geant4_LNGS_underground_intensities_dd.txt  Geant4_LNGS_underground_mean_energies.txt  Geant4_Snolab_underground_intensities_dd.txt  Geant4_Snolab_underground_mean_energies.txt  Geant4_Soudan_underground_energy_CDFs.txt  Geant4_Soudan_underground_intensities_dd.txt  Geant4_Soudan_underground_mean_energies.txt  Geant4_SuperK_underground_energy_CDFs.txt  Geant4_SuperK_underground_intensities_dd.txt  Geant4_SuperK_underground_mean_energies.txt  Geant4_Y2L_underground_energy_CDFs.txt  Geant4_Y2L_underground_intensities_dd.txt  Geant4_Y2L_underground_mean_energies.txt  Mountain_underground_flux_grid.txt  Mountain_underground_intensities_dd.txt  Test_Mountain_underground_energy_CDFs.txt  Test_Mountain_underground_intensities_dd.txt  Test_Mountain_underground_mean_energies.txt  example_mountain_profile.txt
include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  (+5 more)
(+19 files in other folders)
